Fixed card spacing and refactored overall responsiveness

--- a/client/src/sass/components/About.module.scss
+++ b/client/src/sass/components/About.module.scss
@@ -2,6 +2,10 @@
 
 .about {
 	margin-top: 16rem;
+
+	@include phone {
+		margin-top: 4rem;
+	}
 }
 
 .row {
@@ -17,10 +21,18 @@
 	margin-right: 40px;
 
 	@include tab-land {
-		width: 30%;
-		margin-right: 16px;
+		width: 35%;
+		margin-right: 30px;
 	}
+
 	@include tab-port {
+		width: 75%;
+		margin: 0 auto;
+		margin-bottom: 30px;
+	}
+
+	@include phone {
+		padding: 24px;
 		width: 100%;
 	}
 }
@@ -37,13 +49,16 @@
 	width: 55%;
 
 	@include tab-land {
-		width: 70%;
+		width: 65%;
 	}
+
 	@include tab-port {
+		width: 75%;
+		margin: 0 auto;
+		margin-bottom: 30px;
+	}
+
+	@include phone {
 		width: 100%;
 	}
 }
-	.callout {
-		color: $color-text-red;
-		font-weight: 500;
-	}
