--- a/client/src/sass/components/LogStatusButton.module.scss
+++ b/client/src/sass/components/LogStatusButton.module.scss
@@ -6,12 +6,19 @@
 
 .button {
   background: $color-dark-navyBlue;
-  border: 1px solid $color-dark-navyBlue;
   border-radius: 5px;
   color: $color-dark-yellow;
   font-size: 1.6rem;
   font-weight: 700;
-  margin: 1.6rem;
-  padding: 0.8rem;
-  width: 90%;
+  margin-top: 2rem;
+  margin-right: 1.6rem;
+  margin-bottom: 2rem;
+  margin-left: 1.6rem;
+  padding: 1.2rem;
+  width: 92%;
+
+  @include phone {
+    margin-bottom: 0;
+    padding: 0.8rem;
+  }
 }
