--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1,21 +1,24 @@
 @import './mixins/mixins.scss';
 
 // fonts
-$font: "Roboto", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+$font: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
 
 // colours
 $color-dark-yellow: #FFC911;
 $color-dark-navyBlue: #183042;
+$color-black: #151E2E;
 $color-bright-green: #00D6A8;
 $color-white: #fff;
 $color-text-red: #ED3B3C;
 $color-text-gray-500: #a0aec0;
+$color-text-gray-600: #9C9B9B;
 $color-border-gray-400: #cbd5e0;
+$color-border-gray-500: #C4C4C4;
 
 // box-shadows
-$shadow-2xl: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+$shadow-2xl: 0 25px 50px -12px rgba(0, 0, 0, 0.50);
 
 // basic resets
 * {
@@ -74,8 +77,9 @@ a {
   color: $color-dark-navyBlue;
 }
 
-ol {
+li {
   font-size: 1.6rem;
+  list-style: none;
 }
 
 button {
@@ -87,20 +91,24 @@ code {
     monospace;
 }
 
-// basic site-wide container - TODO: MOBILE SIZING
+// Basic site-wide responsive container
 .container {
   width: 90vw;
-  background: plum;
   margin: 0 auto;
+
+  @include xl-desk {
+    width: 80vw;
+  }
+
+  @include tab-land {
+    width: 85vw;
+  }
   
-  // min-width: 100vw;
-  // margin: 0 auto;
-  // @include tab-land {
-  //   width: 100vw;
-  //   min-width: 100vw;
-  // }
-  // @include phone {
-  //   width: 100vw;
-  //   min-width: 100vw;
-  // }
+  @include tab-port {
+    width: 90vw;
+  }
+
+  @include phone {
+    width: 98vw;
+  }
 }
